src/Components/Projects/styles.css
#skill-zone {
  height: 100vh;
}
.yolkify-grid {
  display: grid;
  grid-template-columns: 70px 1fr 2fr 2fr 2fr;
  /* grid-template-rows: repeat(8, 100px); */
  width: 50vw;
  max-width: 1920px;
  margin-left: 100px;
  margin-bottom: 100px;
  background-color: #272727;
  padding: 30px;
  border-radius: 20px;
  border-radius: 20px;
  border: 20px solid #e2a747;
  border-bottom-width: 0px;
  border-left-width: 0px;
  border-right-width: 0px;
}
.yolkify-web-grid {
  display: grid;
  grid-template-columns: 70px 1fr 2fr 2fr;
  /* grid-template-rows: repeat(8, 100px); */
  width: 50vw;
  max-width: 1920px;
  margin-left: 100px;
  margin-bottom: 100px;
  background-color: #272727;
  padding: 30px;
  border-radius: 20px;
  border: 20px solid #e2a747;
  border-bottom-width: 0px;
  border-left-width: 0px;
  border-right-width: 0px;
}
.minterval-border {
  border-color: #9adbb3;
}
.skill-name-holder-grid {
  grid-column: 2;
  grid-row-start: 3;

  /* display: flex; */
  flex-direction: column;
  justify-content: space-between;
  font-size: 16pt;
  align-items: flex-start;
  /* align-self: flex-start; */
}
.project-header {
  margin-left: 100px;
}
#yolkify-dashboard {
  grid-area: 3/ 4/ 8/ 5;
  /* width: 100%; */
  max-width: 200px;
}
#yolkify-profile {
  grid-area: 3/ 5/ 8/ 6;
  width: 100%;
  max-width: 200px;
}
#yolkify-web-ss {
  grid-area: 2/ 3/ 5/ 5;
  border-radius: 5px;
  width: 100%;
}
#minterval-ss-column {
  grid-area: 2/ 3/ 5/ 5;
  border-radius: 5px;
  width: 100%;
}

.skill-name-grid {
  margin: 0px;
  height: 100px;
  align-items: center;
  display: flex;
  justify-content: flex-start;
  font-size: 14pt;
}
.project-content-area {
}

.project-area {
  display: flex;
  flex-direction: column;
}
.logo-column-grid {
  grid-row-start: 3;
  grid-column: 1/2;
}
.project-header-holder {
  grid-column: 0/2;
  grid-row: 0/1;
  display: flex;
  justify-content: space-between;
  /* margin-left: 300px; */
}
.project-name-and-photo {
  display: flex;
  justify-content: space-between;
  align-items: center;
  grid-row: 1;
  grid-column: 1 / span 2;
  align-self: center;
}
.project-name {
  grid-row: 1;
  grid-column: 2;
  display: flex;
  /* align-self: flex-start; */
}
.project-photo {
  grid-row: 1;
  grid-column: 1;
  display: flex;
  justify-content: center;
}
.project-name {
  text-decoration: underline;
  /* font-size: 20pt; */
  /* margin-left: 20px; */
  align-self: flex-start;
}
.project-description {
  /* font-size: 20pt; */
  grid-area: 1/ 4/ 1/ 6;
  margin-left: 10px;
  align-self: center;
}
.description-yolk-web {
  /* font-size: 20pt; */
  grid-area: 1/ 3/ 1/5;

  align-self: center;
}
.description-minterval {
  /* font-size: 20pt; */
  grid-area: 1/ 3/ 1/5;

  align-self: center;
}
.yolkify {
  color: #e2a747;
}
.minterval {
  color: #9adbb3;
}

.project-area {
  /* height: 400px; */
}
.skill-holder-grid {
  grid-column: 1;
  grid-row: 3;
}
@media (max-width: 1200px) {
  #yolkify-web-ss {
    grid-area: 2/ 4/ 5/ 5;
    border-radius: 5px;
    width: 100%;
  }
}
@media (max-width: 780px) {
  #yolkify-web-ss {
    grid-area: 2/ 3/ 5/ 5;
    border-radius: 5px;
    width: 100%;
  }
  .project-header {
    margin-left: 10px;
  }
  .yolkify-grid {
    padding: 10px;
    width: 90vw;
    margin-left: 10px;
  }
  .yolkify-web-grid {
    padding: 10px;
    width: 90vw;
    margin-left: 10px;
  }
}

